# docs

./: .gitignore  .gitmodules  404.html  CLAUDE.md  README.md  index.css  index.html  index.md  index.xml  package-lock.json  package.json  postscript.js  quartz.config.ts  quartz.layout.ts  sitemap.xml
.github/workflows/: sync-and-deploy.yml
content/projects/: index.md
projects/: index.html
projects/fusabi/: README.html  index.html
projects/fusabi-tui/: ARCHITECTURE.html  Cargo.toml  IMPLEMENTATION_SUMMARY.html  LICENSE-APACHE  README.html  SETUP_SUMMARY.html  index.html
projects/fusabi-tui/benches/: widget_rendering.rs
projects/fusabi-tui/docs/: FUSABI_BINDINGS.html  index.html
projects/fusabi-tui/examples/: README.html  formatting_demo.rs  fusabi_demo.fsx  graph_demo.rs  index.html  layout_demo.rs  simple_list.rs  table_demo.rs
projects/fusabi-tui/src/: lib.rs
projects/fusabi-tui/src/bindings/: mod.rs  specs.rs
projects/fusabi-tui/src/canvas/: bounds.rs  edge.rs  graph.rs  mod.rs  node.rs
projects/fusabi-tui/src/formatting/: bytes.rs  mod.rs  numbers.rs  time.rs
projects/fusabi-tui/src/layouts/: mod.rs
projects/fusabi-tui/src/widgets/: mod.rs  table.rs
projects/fusabi-tui/tests/: bindings_test.rs  integration_test.rs
scripts/: discover-repos.nu  update-docs.nu
static/: contentIndex.json
tags/: 001-003.html  004-006.html  007-009.html  012-014.html  015-017.html  018-019.html  018.html  020-021.html  1E1E1E.html  67-71.html  99CC33.html  home.html  index.html  overview.html  projects.html
tags/018/: .html
(+114 files in other folders)
