[package]
name = "fusabi-tui"
version = "0.1.0"
edition = "2021"
authors = ["Raibid Labs"]
description = "Terminal UI library for Fusabi - providing Ratatui bindings and widgets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raibid-labs/fusabi-tui"
keywords = ["tui", "terminal", "fusabi", "ratatui", "ui"]
categories = ["command-line-interface", "visualization"]

[dependencies]
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.28"
tracing = "0.1"

# Fusabi dependencies (optional for bindings feature)
fusabi = { git = "https://github.com/fusabi-lang/fusabi", branch = "main", optional = true }
fusabi-vm = { git = "https://github.com/fusabi-lang/fusabi", branch = "main", optional = true }

[features]
default = ["bindings"]
bindings = ["fusabi", "fusabi-vm"]

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "widget_rendering"
harness = false
